--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -5,7 +5,7 @@ format: html
 
 ```{r}
 if(!require("pacman")) install.packages("pacman")
-pacman::p_load(tidyverse, gtsummary, kableExtra, broom, lme4, splines, ggeffects, nlme, splines)
+pacman::p_load(tidyverse, gtsummary, kableExtra, broom, lme4, splines, ggeffects, nlme, splines, usmap, ggplot2, tidytext)
 ```
 
 
@@ -15,10 +15,50 @@ dat = dat |>
   mutate(date_num = as.numeric(date))
 ```
 
-### EDA
-### Analysis from pset4
+### Exploration Data Analysis
+### show the regions and states on the US map
+```{r}
+dat |> 
+  distinct(region, state) |> 
+  group_by(region) |> 
+  summarise(states = paste(sort(state), collapse = ", "))
+```
+```{r}
+region_df <- tibble::tribble(
+  ~state, ~region,
+  "CT", 1, "MA", 1, "ME", 1, "NH", 1, "RI", 1, "VT", 1,
+  "NJ", 2, "NY", 2, "PR", 2,
+  "DC", 3, "DE", 3, "MD", 3, "PA", 3, "VA", 3, "WV", 3,
+  "AL", 4, "FL", 4, "GA", 4, "KY", 4, "MS", 4, "NC", 4, "SC", 4, "TN", 4,
+  "IL", 5, "IN", 5, "MI", 5, "MN", 5, "OH", 5, "WI", 5,
+  "AR", 6, "LA", 6, "NM", 6, "OK", 6, "TX", 6,
+  "IA", 7, "KS", 7, "MO", 7, "NE", 7,
+  "CO", 8, "MT", 8, "ND", 8, "SD", 8, "UT", 8, "WY", 8,
+  "AZ", 9, "CA", 9, "HI", 9, "NV", 9,
+  "AK",10, "ID",10, "OR",10, "WA",10
+) |> 
+  mutate(region = as.factor(region)) 
 
-###Describe if COVID-19 became less or more virulent across the different periods.
+region_colors <- c(
+  "#d95f02", # 1
+  "#bf812d", # 2
+  "#80b1d3", # 3
+  "#5ab4ac", # 4
+  "#1b9e77", # 5
+  "#66c2a5", # 6
+  "#3288bd", # 7
+  "#984ea3", # 8
+  "#e78ac3", # 9
+  "#f781bf"  # 10
+)
+plot_usmap(data = region_df, values = "region", color = "white") +
+  scale_fill_manual(values = region_colors, name = "Region") +
+  theme_classic() +
+  ggtitle("Regional Map of the US")
+
+```
+
+###Describe if COVID-19 became less or more virulent across the different periods.(Analysis from pset4)
 
 Plot a trend plot for cases, hospitalizations and deaths for each state. Color by region. Plot rates per $100,000$ people. Place the plots on top of each other. Hint: Use `pivot_longer` and `facet_wrap`.
 ```{r}
@@ -29,22 +69,9 @@ dat |>
   facet_wrap(~outcome, ncol = 1, scales = 'free_y') + theme_classic()
 ```
 
-To determine when vaccination started and when most of the population was vaccinated, compute the percent of the US population (including DC and Puerto Rico) vaccinated by date. Do the same for the booster. Then plot both percentages.
-```{r}
-p <- dat |> group_by(date) |> summarise(pop = sum(pop), series = sum(series),
-                                   booster = sum(booster)) |>
-  pivot_longer(c(booster, series), names_to = "vaccine", values_to = "rate") |>
-  mutate(rate = rate / pop * 100) |>
-  ggplot(aes(date, rate, color = vaccine)) + geom_line() + theme_classic() + 
-  ylab('percent vaccinated') + ggtitle('COVID 19 US Vaccination rates over time')
-print(p)
-```
 
 ### Divide the pandemic period, 2020/01/20 to 2023/05/11(first confirmed case of COVID-19, to the end of the public health emergency) into waves. For each period compute the deaths rates by state. Describe which states did better or worse during the different periods.
 ```{r}
-library(tidyverse)
-library(ggplot2)
-library(tidytext)
 # Divide the pandemic period into waves
 dat <- dat |> 
   mutate(wave = case_when(
@@ -82,6 +109,16 @@ ggplot(death_summary, aes(x = reorder_within(state, death_rate, wave),
 
 ```
 
+To determine when vaccination started and when most of the population was vaccinated, compute the percent of the US population (including DC and Puerto Rico) vaccinated by date. Do the same for the booster. Then plot both percentages. (Analysis from pset4)
+```{r}
+p <- dat |> group_by(date) |> summarise(pop = sum(pop), series = sum(series),
+                                   booster = sum(booster)) |>
+  pivot_longer(c(booster, series), names_to = "vaccine", values_to = "rate") |>
+  mutate(rate = rate / pop * 100) |>
+  ggplot(aes(date, rate, color = vaccine)) + geom_line() + theme_classic() + 
+  ylab('percent vaccinated') + ggtitle('COVID 19 US Vaccination rates over time')
+print(p)
+```
 
 
 ### LME Models
